--- a/02_const关键字.html
+++ b/02_const关键字.html
@@ -14,6 +14,13 @@
         const s = 10
         // let 变量具有的特点都有
         // 必须赋初始值
+        // const a 
+
+        // 对于引用数据类型，赋值之后，地址是不能改变的，但是里面的元素值是可以改变的 
+        const ar = [1,2,3]
+        ar[0] = 4
+        alert(ar)
+        // ar = [4,5,6]
     </script>
 </body>
 </html>
