--- a/02_const关键字.html
+++ b/02_const关键字.html
@@ -21,6 +21,15 @@
         ar[0] = 4
         alert(ar)
         // ar = [4,5,6]
+
+        const stu = {
+            name:'张三',
+            age: 23
+        }
+        stu.name = '李四'
+        console.log(stu);
+
+        
     </script>
 </body>
 </html>
